@@ -20,6 +20,7 @@ sunuo (0.3.0) unstable; urgency=low
   * disable console in service mode
   * added Config.Features
     - disable-context-menus
+    - prefer-ascii
   * Config.MultiThreading renamed to Config.Features["multi-threading"]
   * moved config classes to namespace Server.Config
   * Config.GameServerList implements IEnumerable
